vpc.tf
resource "aws_vpc" "main"{
  cidr_block = var.cidr_block

  tags = {
    "Name" = "Main VPC"
  }
}

# enable access to or from the internet for 
# instances in public subnets
#
#
resource "aws_internet_gateway" "main" {
  vpc_id = "aws_vpc.main.id"

  tags = {
    "Name" = "Main IGW"
  }
}
